Improve XmlProcessor code quality and exception handling
- Use pattern matching for instanceof in XPath and namespace configuration parsing
- Replace manual null/whitespace checks with Strings.hasText() utility method
- Clean up exception messages by removing redundant e.getMessage() concatenation
- Add ByteArrayInputStream import instead of fully qualifying at point of use
- Fix Javadoc formatting to use proper HTML lists instead of markdown syntax
- Update parameter names in processXPathExpressionsFromDom for clarity
- Simplify exception handling by letting XPathExpressionException bubble up
- Update tests to match cleaner exception message format